public/stylesheets/widgets.css
/*
 * General-purpose widget styles, applied regardless of what the widget "theme" is
 */

.netlogo-model {
    display: flex;
    padding: 20px;
    flex-flow: column;
    font-size: 12px;
    font-family: "Lucida Grande", sans-serif;
    outline: none;
}

.netlogo-header {
    display: flex;
    flex-flow: row;
    align-items: center;
}

.netlogo-widget {
    box-sizing: border-box;
    background-color: #CCC;
    border-radius: 4px;
    overflow: hidden;
}

.netlogo-command,.netlogo-input {
    user-select: none;
}

.netlogo-command:hover,.netlogo-input:hover {
    cursor:     pointer;
    box-shadow: 0 0 6px 3px rgba(15, 15, 15, .40);
}

.netlogo-command.netlogo-disabled:hover {
    cursor:     default;
    box-shadow: none;
}

.netlogo-tab-area {
  margin-top: 25px;
}

.netlogo-tab {
  display: block;
  background-color: #BCBCE5;
  background-image: url("data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyIDEiPjxwb2x5Z29uIHBvaW50cz0iMCwwIDIsMCAxLDEiIGZpbGw9InJnYig4Myw4Myw4MykiLz4gPC9zdmc+");
  background-position: 97% 50%;
  background-repeat: no-repeat;
  background-size: 20px 20px;
  border-width: 2px;
  border-bottom-width: 0;
  border-style: solid;
  padding: 7px;
  text-align: center;
  cursor: pointer;
}

.netlogo-tab.netlogo-active {
  background-image: url("data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyIDEiPjxwb2x5Z29uIHBvaW50cz0iMCwxIDIsMSAxLDAiIGZpbGw9InJnYig4Myw4Myw4MykiLz4gPC9zdmc+");
}

.netlogo-tab:first-child {
  border-radius: 10px 10px 0px 0px;
}

.netlogo-tab:last-child, .netlogo-tab-content:last-child {
  border-radius: 0px 0px 10px 10px;
  border-bottom-width: 2px;
}

.netlogo-tab:hover  {
  background-color: #D3D3EE;
}

.netlogo-tab.netlogo-active:hover  {
  background-color: #9E99FD;
}

.netlogo-tab input[type=checkbox] {
  display: none;
}

.netlogo-tab-text {
  font-size: 20px;
  font-weight: bold;
  text-align: center;
}

.netlogo-tab-content {
  margin-top: 0;
  border: 0 solid #242479;
  border-left-width: 2px;
  border-right-width: 2px;
}

.growing {
  animation-name: grow;
  animation-duration: 0.4s;
  animation-timing-function: ease-out;
}

.shrinking {
  animation-name: grow;
  animation-direction: reverse;
  animation-duration: 0.4s;
  animation-timing-function: ease-in;
}

@keyframes grow {
  0% {
    max-height: 0;
  }
  100% {
    max-height: 100%;
  }
}

.netlogo-model-text {
    background-color: white;
}

.netlogo-code-container {
    display: flex;
    flex-flow: column;
    background-color: white;
    margin-top: 0;
}

.netlogo-ugly-button {
  text-align: center;
  background-color: rgb(240, 240, 240);
  border-color: rgb(238, 238, 238);
}

.netlogo-code {
  border-top: 1px solid black;
  font-family: monospace;
}

.netlogo-recompilation-button {
  width: 30%;
  margin: 12px auto;
  font-size: 16px;
  font-weight: bold;
  cursor: pointer;
}

.netlogo-code .CodeMirror {
    height: 500px;
}

.netlogo-info-editor {
  border: 1px solid black;
}

.netlogo-info-editor .CodeMirror {
    height: 500px;
}

.netlogo-toggle-edit-mode {
  display: block;
  margin: 0;
  margin-bottom: 10px;
}

.netlogo-info {
  flex: 1;
  margin-top: 0;
  padding-top: 10px;
  padding: 15px;
}

.netlogo-command-center {
  flex: 1;
  display: flex;
  flex-direction: column;
  height: 175px;
  padding: 6px 8px;
}

.netlogo-command-center-editor {
  height: 1.25em;
  flex-grow: 1;
}

.netlogo-command-center-editor .CodeMirror {
  border: 1px solid #eee;
  height: auto;
}

.netlogo-output-widget {
  display: flex;
  padding: 5px;
}

.netlogo-output-area {
  flex-grow: 1;
  flex-direction: column;
  background-color: white;
  margin: 0px;
  overflow: auto;
}

.netlogo-command-center-input {
  display: flex;
  flex-shrink: 0;
}

.netlogo-speed-slider {
    background-color: transparent;
    border: none;
    margin-right: 10px;
    flex: auto;
    display: flex;
    align-items: baseline;
}

.netlogo-widget input[type=range]::-ms-tooltip {
  display: none;
}

.netlogo-speed-slider input {
    border: none;
    flex: auto;
}

.netlogo-model input[type=range] {
    cursor: pointer;
    cursor: grab;
}

.netlogo-model input[type=range]:active {
    cursor: pointer;
    cursor: grabbing;
}

.netlogo-tick-counter {
    background-color: #F4F4F4;
    font-size: 13px;
    margin: 3px;
    border: none;
    height: 15px;
}

.netlogo-button {
    border: inherit;
    display: flex;
    justify-content: space-around;
    align-items: center;
    padding: 0px;
}

.netlogo-disabled {
  color: grey;
}

.netlogo-button.clear-button {
    padding: 5px;
}

.netlogo-button .netlogo-label {
    /* For some reason, Safari doesn't like justify-content in buttons,
       we have to resort to putting a span in the button that can then be
       centered.
       BCH 11/14/2014 */
    margin: auto;
}

.netlogo-action-key {
  position: absolute;
  top: 0px;
  right: 0px;
  margin: 0px 2px;
  color: grey;
}

.netlogo-action-key.netlogo-focus {
  color: black;
}

.netlogo-button:active, .netlogo-forever-button.netlogo-active {
    background-color: gray;
    color: white;
}

.netlogo-text-box {
    background-color: white;
    border: none;
    margin: 0;
    white-space: pre-wrap;
    font-family: "Lucida Grande", sans-serif;
}

.netlogo-switcher {
    display: flex;
    align-items: center;
}

.netlogo-slider {
    padding-left: 3px;
    padding-right: 3px;
}

.netlogo-slider:hover {
    cursor: default;
}

.netlogo-slider input[type=range] {
    padding: 0px;
    width: 100%;
    margin: 0px;
    height: 22px;
    margin-bottom: -4px;
    margin-top: -3px;
    background-color: transparent;
}

.netlogo-label {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

.netlogo-slider-label {
    display: flex;
    justify-content: space-between;
}

.netlogo-slider-label .netlogo-label {
    min-width: 0;
    flex: 1 1 auto;
}

.netlogo-slider-label .netlogo-slider-value {
    flex: 0 0 auto;
}

.netlogo-slider-label input[type=number] {
    margin: 0px;
    border: 1px;
    padding: 0px;
}


.netlogo-monitor {
    padding: 2px 4px;
    display: flex;
    flex-flow: column;
    justify-content: space-around;
}

.netlogo-monitor > .netlogo-value {
    background-color: white;
    padding: 2px 2px;
}

.netlogo-value {
    overflow: hidden;
}

.netlogo-input-box {
    padding: 2px 4px;
    display: flex;
    flex-flow: column;
    justify-content: space-around;
}

.netlogo-chooser {
    padding: 2px 4px;
    display: flex;
    flex-flow: column;
    justify-content: space-around;
}

.netlogo-plot {
    box-sizing: content-box; /* otherwise border gets cut off -- BCH 11/9/2014 */
    border: 1px solid black;
}

.netlogo-forever-button > input {
    display: none;
}

.netlogo-subheader {
    display: flex;
    flex-flow: column;
}

